# robot_follow

./: LICENSE  README.md
people_tracking/: CMakeLists.txt  package.xml
people_tracking/include/people_tracking/: people_tracking.h
people_tracking/launch/: tracking.launch
people_tracking/src/: people_tracking_core.cpp  people_tracking_node.cpp
track_pkg/: CMakeLists.txt
